--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <form class="search-form" id="search-form">
+        <div class="wrapper">
+           <input
+            class="search-form__input"
+            type="text"
+            name="searchQuery"
+            autocomplete="off"
+            placeholder="Search images..."
+            />
+            <button class="submit-btn" type="submit">Search</button>
+        </div>
+    </form>
+    <div class="gallery"></div>
+    <button class="load-more" type="submit">Load more</button>
+
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
